# batch-data-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: week-1-dataset-scale-invariants.md  week1-domain-model.md
docs/decisions/: 0001-seed-rerun-semantics.md
scripts/: seed.py  smoke.py
sql/checks/: 001_sanity.sql
sql/ddl/: 001_create_core_tables.sql  002_create_subscriptions.sql  003_create_invoices.sql  004_create_payments.sql
src/batch_data_platform/: config.py  seeding.py  smoke_checks.py
tests/: test_smoke_unit.py
